# CADDEE

./: .gitignore  README.md  wip_summary.md
.claude/adws/: __init__.py  pyproject.toml
.claude/adws/core/: __init__.py  expert_router.py  logging.py  orchestrator.py  state.py
.claude/adws/sessions/adw-build-20260120-123323/: state.json
.claude/adws/sessions/adw-build-20260328-byok/: state.json
.claude/adws/sessions/adw-build-20260328-phase1/: state.json
.claude/adws/sessions/adw-build-20260328-phase4/: state.json
.claude/adws/sessions/adw-plan-20260120-123030/: context.md  state.json
.claude/adws/sessions/adw-plan-20260121-144500/: state.json
.claude/adws/sessions/adw-plan-20260328-byok/: state.json
.claude/adws/sessions/adw-research-20260208-080342/: state.json
.claude/adws/sessions/adw-review-20260120-154110/: review-report.md
.claude/adws/sessions/batch-adw-20260120-150705/: context.md  expert-routing.json  state.json
.claude/adws/sessions/batch-adw-20260121-130212/: context.md  expert-routing.json  state.json
.claude/adws/sessions/batch-adw-20260208-080342/: context.md  expert-routing.json  state.json
.claude/adws/sessions/batch-build-adw-20260120-151352/: expert-assignments.json  state.json
.claude/adws/sessions/batch-build-adw-20260121-102710/: context.md  state.json
.claude/adws/sessions/batch-build-adw-20260121-131014/: context.md  (+2 more)
sidecar/: pyproject.toml
sidecar/caddee/: main.py
sidecar/caddee/prompts/: system_prompt.txt
sidecar/caddee/services/: claude_service.py  freecad_service.py  openscad_service.py  session_manager.py
(+123 files in other folders)
