[project]
name = "caddee-sidecar"
version = "0.1.0"
description = "CADDEE Python sidecar — Claude API, OpenSCAD CLI, session management"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "trimesh>=4.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["caddee"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
